data/style.css
@import url('https://fonts.googleapis.com/css?family=New+Rocker|Pirata+One|Roboto|UnifrakturCook:700');
@import url('comments.css');

body {
    overflow-y: scroll;
    background: url('../img/blue.jpg') fixed;
    background-size: cover;
    color: black;
    font-family: 'Roboto', sans-serif;
    font-size: 13pt;
    line-height: 15pt;
}
main {
    width: 40em;
    margin: 1em auto 5em auto;
    text-align: left;
}
.clear {
    clear: both;
}

#top-header {
    margin: 1.5em auto;
    text-align: center;
}
#top-header h1 {
    font-family: 'UnifrakturCook', cursive;
    margin: 0;
    font-size: 40pt;
    line-height: 30pt;
}
#top-header h1 a {
    color: black;
    text-decoration: none;
}
#top-nav {
    margin-top: 1em;
}

#top-nav ul {
    margin: 0;
    padding: 0;
    display: flex;
}
#top-nav ul li {
    display: inline-block;
    flex-grow: 1;
}
#top-nav ul li:not(:first-child) {
    margin-left: 0;
}
#top-nav ul li a {
    display: block;
    padding: 0.2em 0.5em;
    border-top: 3px solid rgba(190, 190, 190, 0.8);
    border-left: 3px solid rgba(190, 190, 190, 0.8);
    border-bottom: 3px solid rgba(0, 0, 0, 0.5);
    border-right: 3px solid rgba(0, 0, 0, 0.5);
    background: url('../img/stone.jpg');
    font-family: 'Pirata One', cursive;
    font-size: 20pt;
    line-height: 16pt;
    color: rgba(255, 255, 255, 0.7);
    text-shadow: -1px -1px black, 0 0 0.3em black;
    text-transform: uppercase;
    text-decoration: none;
    text-align: center;
}
#top-nav ul li a:active {
    border-style: inset;
}

#attention {
    background: linear-gradient(90deg, rgba(255, 0, 0, 0), orange 25%, orange 75%, rgba(255, 0, 0, 0));
    color: black;
    text-align: center;
    padding: 0.2em;
}
#attention a {
    color: green;
}

#body h1 {
    font-size: 16pt;
}
#body h2 {
    font-size: 100%;
}
#body>*:first-child {
    margin-top: 0;
}
#body>*:last-child {
    margin-bottom: 0;
}

#body li {
    margin-bottom: 0.5em;
}

.news {
    margin-bottom: 4em;
}
.news .title {
    font-family: 'New Rocker';
    font-size: 18pt;
    line-height: 18pt;
    text-align: center;
    overflow: hidden;
}
.news .title a {
    display: inline-block;
    position: relative;
    text-decoration: none;
    color: black;
}
.news .title a:before,
.news .title a:after {
    content: "";
    position: absolute;
    height: 5px;
    border-bottom: 1px solid black;
    border-top: 1px solid black;
    top: calc(50% - (5px + 2px) / 2);
    width: 600px;
}
.news .title a:before {
    right: 100%;
    margin-right: 15px;
}
.news .title a:after {
    left: 100%;
    margin-left: 15px;
}
.news .date {
    font-size: 10pt;
    text-align: center;
    color: rgba(0, 0, 0, 0.5);
}


.news img {
    max-width: 100%;
}

table {
    border-collapse: collapse;
    width: 100%;
}
table thead tr {
    background: #CCC;
}
table tbody tr {
    background: #EEE;
}
table th,
table td {
    border: 1px solid silver;
    padding: 0.2em 0.5em;
}

table.releases {
    font-size: 80%;
    margin-bottom: 3em;
}
table.releases .date,
table.releases .links {
    white-space: nowrap;
    text-align: center;
}
table.releases .file {
    width: 100%;
}
table.releases td.link[rowspan] {
  background: rgba(0,200,0,0.05);
}
table.releases td.link[rowspan]:after {
    content: '(batch)';
}

.split {
    display: flex;
}
.split figure {
    width: 50%;
    margin: 0.5em;
    padding: 0;
    text-align: center;
}

li p,
li ul,
li ol {
    margin: 0 0 0.5em 0;
}

figure {
    margin: 0;
    text-align: center;
}
figure img {
    width: 75%;
    margin: 0 auto;
}
figure.small img {
    width: 50%;
}
figure figcaption {
    font-style: italic;
}

img.flag {
    box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.15);
    margin-left: 0.5em;
}

#featured-images #body {
    text-align: center;
}
#featured-images #top-nav,
#featured-images #attention {
    display: none;
}
#featured-images ul {
    list-style-type: none;
    padding: 0;
    display: flex;
    flex-wrap: wrap;

}
#featured-images li {
    margin: 0 1em 1em 0;
    width: calc(33% - 1em);
}
#featured-images li img {
    max-width: 100%;
}

#home main {
    text-align: center;
}
#home #top-nav,
#home #attention {
    display: none;
}
#home img {
    margin: 0 auto;
    display: inline-block;
    max-width: 80%;
}

#anime-list #body a {
    display: inline-block;
}
#anime-list #body ul {
    list-style-type: none;
    margin: 1em 0 2em 0;
    padding: 0;
}
#anime-list #body li {
    margin: 0 1em 1em 0;
    padding: 0;
    display: inline-block;
    text-align: center;
    width: 12em;
    vertical-align: top;
}
#anime-list #body .cover {
    display: inline-block;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    line-height: 0;
}
#anime-list #body .cover>div {
    display: inline-block;
    width: 12em;
    height: 8em;
    border-top: 5px solid rgba(255, 255, 255, 0.5);
    border-left: 5px solid rgba(255, 255, 255, 0.5);
    border-bottom: 5px solid rgba(0, 0, 0, 0.5);
    border-right: 5px solid rgba(0, 0, 0, 0.5);
}

#anime-page #body img {
    max-width: 70%;
    max-height: 20em;
    margin: 0;
}
#anime-page #body .description {
    margin-top: 0.5em;
    font-size: 85%;
    line-height: 130%;
}

